--- a/sln-dependency/lib.dependency/lib.dependency.csproj
+++ b/sln-dependency/lib.dependency/lib.dependency.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="inject.method\" />
+      <Folder Include="inject.property\" />
+    </ItemGroup>
+
 </Project>
